--- a/src/pages/Organizations/Organizations.module.css
+++ b/src/pages/Organizations/Organizations.module.css
@@ -214,9 +214,7 @@
   }
 
   .hero::before {
-    border-radius: 0 0 50% 50% / 100%;
-    height: 45%;
-    bottom: -6px;
+    border-radius: 0 0 50% 50% / 35%;
   }
 
   .hero::after {
